--- a/CSS/root.css
+++ b/CSS/root.css
@@ -4,5 +4,5 @@
     --SansProfont: 'Source Sans Pro';
     --articlecolor: rgba(0, 0, 0, 1);
     --addresscolor: rgba(255, 255, 255, 0.4);
-
+    --ArticleSecendColor: rgba(102, 102, 102, 1);
 }
