--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,11 @@
+:root {
+    --lettercolor: #FFFFFF;
+    --Oswaldfont: 'Oswald';
+    --SansProfont: 'Source Sans Pro';
+    --articlecolor: rgba(0, 0, 0, 1);
+    --addresscolor: rgba(255, 255, 255, 0.4);
+    --ArticleSecendColor: rgba(102, 102, 102, 1);
+}
 * {
     padding: 0;
     margin: 0;
