--- a/CSS/header.css
+++ b/CSS/header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 950px;
 }
 .nav-bar-ul-li a{
     text-decoration: none;
