--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,6 +79,7 @@ section {
     text-align: center;
     border-radius: 18px;
     border: 0px;
+    cursor: pointer;
 }
 .background-2 {
     height: 666px;
@@ -93,19 +94,20 @@ section {
     padding-top: 80px;
 }
 .symbol-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 150px;
     width: 150px;
     background-color: #39C2D7;
     border-radius: 50%;
     margin: 35px auto;
-    text-align: center;
 }
 .symbol {
     border: 0px;
     background-color: #39C2D7;
     color: var(--lettercolor);
     font-size: 60px;
-    margin-top: 47px;
 }
 .background-2-h3 {
     color: var(--lettercolor);
@@ -156,7 +158,7 @@ footer {
     grid-row-start: 2;
 }
 .grid-container {
-    width: 900px;
+    width: 920px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 83px;
